<package format="3">
  <name>data_acquisition_2d</name>
  <version>0.4.14</version>
  <description>data_acquisition tool for generating 2d object detection's training data.<br />
  </description>
  <maintainer email="jil@johnan.com">jil</maintainer>

  <license>Whatever</license>
  <author>jil</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend>qt_dotgraph</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rosnode</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosservice</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>

